--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.BLEFrame'
+    namespace 'com.example.bleframe'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.BLEFrame"
-        minSdk 31
+        applicationId "com.example.bleframe"
+        minSdk 28
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -36,42 +36,55 @@ android {
     buildFeatures {
         viewBinding true
     }
-    dataBinding {
-        //noinspection DataBindingWithoutKapt
-        enabled = true
+    hilt {
+        enableTransformForLocalTests = true
     }
     kapt {
-        correctErrorTypes = true
+        correctErrorTypes true
     }
 }
 
 dependencies {
 
     // BLE
-    implementation 'no.nordicsemi.android:ble:2.6.1'
-    implementation 'no.nordicsemi.android:ble-ktx:2.6.1'
+    implementation 'no.nordicsemi.android:ble:2.6.0'
+    implementation 'no.nordicsemi.android:ble-ktx:2.6.0'
+
+    //hilt
+    implementation 'com.google.dagger:hilt-android:2.48.1'
+    kapt 'com.google.dagger:hilt-compiler:2.48'
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.48.1'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.48'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.48.1'
+    kaptTest 'com.google.dagger:hilt-compiler:2.48'
 
     // Room
     implementation 'androidx.room:room-rxjava2:2.6.0'
     implementation 'androidx.room:room-runtime:2.6.0'
     implementation 'androidx.room:room-ktx:2.6.0'
-    // замена kapt (ksp)
     kapt 'androidx.room:room-compiler:2.6.0'
 
-    //  для загрузки
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
-    // Hilt
-    implementation 'com.google.dagger:hilt-android:2.44.2'
-    kapt 'com.google.dagger:hilt-compiler:2.44.2'
-    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.44.2'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.44.2'
-    testImplementation 'com.google.dagger:hilt-android-testing:2.44.2'
-    kaptTest 'com.google.dagger:hilt-compiler:2.44.2'
+    // Lottie
+    implementation 'com.airbnb.android:lottie:4.2.0'
 
-    // простое/ обычное / стандарт
+    // moshi
+    implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
+    implementation 'com.squareup.moshi:moshi:1.14.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.14.0")
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation('com.squareup.okhttp3:okhttp:5.0.0-alpha.11')
+    implementation('com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11')
+
+    // main
     implementation 'com.google.android.material:material:1.10.0'
-    implementation("androidx.navigation:navigation-fragment-ktx:2.7.4")
+    implementation('androidx.navigation:navigation-fragment-ktx:2.7.4')
     implementation("androidx.navigation:navigation-ui-ktx:2.7.4")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
